[gd_scene load_steps=5 format=2]

[ext_resource path="res://autoload/debug.gd" type="Script" id=1]
[ext_resource path="res://fonts/determination.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="debug" type="CanvasLayer"]
layer = 99
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 0.3
anchor_bottom = 0.2
theme = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 192.0
margin_bottom = 17.0
text = "DEBUG MENU!"

[node name="dialogue_debugger" type="Button" parent="Panel/VBoxContainer"]
margin_top = 21.0
margin_right = 192.0
margin_bottom = 44.0
text = "dialogue debugger"

[node name="clear_save" type="Button" parent="Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 192.0
margin_bottom = 71.0
text = "clear save"

[connection signal="pressed" from="Panel/VBoxContainer/dialogue_debugger" to="." method="_on_dialogue_debugger_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/clear_save" to="." method="_on_clear_save_pressed"]
